[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drukbox-python-sdk"
version = "0.0.4"
description = "Async Python client for Drukbox."
readme = "README.md"
# Tracks the lowest Python any current consumer supports. Bump only
# when a real consumer needs a 3.12+ feature.
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28",
]

[tool.hatch.build.targets.wheel]
packages = ["src/drukbox_sdk"]

[dependency-groups]
dev = [
    "pyright>=1.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "respx>=0.23",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
